# CG

HW/HW1/: a.out  ellipse.cpp  ppm.cpp  result.ppm  stater_code.cpp  test_ppm.cpp
HW/HW1/Rep/: Rep.md  Rep_1.md  Rep_2.md
HW/HW1/result/: test11.ppm  test12.ppm  test13.ppm  test18.ppm  test19.ppm  test2.ppm  test22.ppm  test25.ppm  test26.ppm  test27.ppm  test28.ppm  test3.ppm  test35.ppm  test36.ppm  test37.ppm  test4.ppm  test43.ppm  test44.ppm  test45.ppm  test46.ppm  test5.ppm  test50.ppm  test51.ppm  test52.ppm  test53.ppm  test54.ppm  test56.ppm  test57.ppm  test59.ppm  test6.ppm  test60.ppm  test63.ppm  test65.ppm  test66.ppm  test67.ppm  test68.ppm  test69.ppm  test70.ppm  test9.ppm
HW/HW2/: CMakeLists.txt
HW/HW2/src/: main.cpp
Labs/Lab1/: .stater_code.cpp.un~
Labs/Lab2/new_openGL/include/glad/: glad.h
Labs/Lab2/new_openGL/src/: main.cpp
Labs/Project_1/new_openGL/: .CMakeLists.txt.un~
Labs/Project_1/new_openGL/src/: InportModel.h  glad.c  main.cpp
Labs/Test/new_openGL/: CMakeLists.txt
Labs/Test/new_openGL/src/: .main.cpp.un~  main.cpp  main.h
